--- a/src/index.css
+++ b/src/index.css
@@ -97,4 +97,19 @@
   body::-webkit-scrollbar {
     display: none; /* Chrome, Safari */
   }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(7px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .tab-in {
+    animation: fadeIn 0.3s ease-out;
+  }
 }
